--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+:root {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 div {
   border: 1px solid black;
 }
@@ -14,17 +18,56 @@ body {
   grid-row: 1 / 3;
 }
 
+.left-nav ul {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2rem;
+  gap: 20px;
+  margin-bottom: 20%;
+}
+
+.dashboard-title {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  min-width: 250px;
+  overflow: hidden;
+}
+
+.left-nav img {
+  display: inline;
+  width: 25%;
+}
+
 .header {
   grid-column: 2 / 4;
   grid-row: 1 / 1;
 }
 
-.projects {
+.middle {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  display: flex;
+  flex-direction: column;
 }
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 50px;
+  flex: 1;
+}
+
 
 .right-bar {
   grid-column: 3 / 4;
   grid-row: 2 / 3;
+}
+
+
+.announcements, .trending {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
