--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,13 @@ body {
   display: grid;
   grid-template-columns: 1fr 4fr 1fr;
   grid-template-rows: 1fr 3fr;
-  height: 100vh;
+  height: calc(100vh - 1px);
+  margin: 0;
+}
+
+.icon {
+  height: 3vh;
+  display: inline-block;
 }
 
 .left-nav {
@@ -18,12 +24,11 @@ body {
   grid-row: 1 / 3;
 }
 
-.left-nav ul {
+.nav-link {
   display: flex;
-  flex-direction: column;
-  font-size: 1.2rem;
-  gap: 20px;
-  margin-bottom: 20%;
+  align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 .dashboard-title {
@@ -32,6 +37,11 @@ body {
   gap: 15px;
   min-width: 250px;
   overflow: hidden;
+  margin-bottom: 2rem;
+}
+
+.nav-top {
+  margin-bottom: 3rem;
 }
 
 .left-nav img {
@@ -44,11 +54,19 @@ body {
   grid-row: 1 / 1;
 }
 
+.upper-header {
+  display: grid;
+  grid-template-columns: 1fr 10fr 1fr 1fr 3fr;
+  grid-template-rows: 1fr;
+  align-items: center;
+}
+
 .middle {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   display: flex;
   flex-direction: column;
+  margin: 15px;
 }
 
 .projects {
@@ -59,6 +77,9 @@ body {
   flex: 1;
 }
 
+.project {
+  border-radius: 10px;
+}
 
 .right-bar {
   grid-column: 3 / 4;
