styled general background colors, padding, margins

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
 :root {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  box-sizing: border-box;
+  --blue: #2563eb;
+  --white: #eff6ff;
+  --gray: #00204a17;
 }
 
+/*
 div {
   border: 1px solid black;
-}
+}*/
 
 body {
   display: grid;
@@ -22,6 +27,13 @@ body {
 .left-nav {
   grid-column: 1 / 1;
   grid-row: 1 / 3;
+  background-color: var(--blue);
+  color: var(--white);
+
+}
+
+.left-nav .icon {
+  filter: invert(100%) sepia(56%) saturate(1836%) hue-rotate(178deg) brightness(103%) contrast(104%);
 }
 
 .nav-link {
@@ -47,6 +59,7 @@ body {
 .left-nav img {
   display: inline;
   width: 25%;
+  filter: invert(100%) sepia(56%) saturate(1836%) hue-rotate(178deg) brightness(103%) contrast(104%);
 }
 
 .header {
@@ -76,6 +89,10 @@ body {
 
 input {
   flex: 1;
+  border: none;
+  border-radius: 2rem;
+  background-color: var(--gray);
+  padding-left: 20px;
 }
 
 .upper-icons {
@@ -85,12 +102,48 @@ input {
   flex: 1;
 }
 
+.lower-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.greeting {
+  display: flex;
+  margin-left: 1rem;
+}
+
+.greeting-words {
+  margin-left: 1rem;
+}
+
+.profile-picture {
+  width: 6rem;
+}
+
+
+button {
+  background-color: var(--blue);
+  color: var(--white);
+  padding: 1rem;
+  border: none;
+  border-radius: 2rem;
+  width: 125px;
+  font-weight:600;
+  font-size: 16px;
+}
+
 .middle {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   display: flex;
   flex-direction: column;
-  margin: 15px;
+  margin: 0;
+  padding: 15px;
+}
+
+.middle, .right-bar {
+  background-color: var(--gray);
 }
 
 .projects {
@@ -103,7 +156,18 @@ input {
 
 .project {
   border-radius: 10px;
+  padding: 0.5rem;
+  padding-left: 1rem;
+  border-left: 3px solid #1e40af;
 }
+
+.project, .announcements, .trending {
+  background-color: var(--white);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
+}
+
+
 
 .right-bar {
   grid-column: 3 / 4;
